--- a/package.json
+++ b/package.json
@@ -30,8 +30,7 @@
   "dependencies": {
     "babel-runtime": "^6.26.0",
     "bluebird": "^3.5.1",
-    "debug": "^3.1.0",
-    "supertest": "^3.0.0"
+    "debug": "^3.1.0"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
@@ -54,6 +53,7 @@
     "loopback-edge-arangodb": "^1.3.1",
     "mocha": "^4.0.1",
     "nsp": "^2.8.0",
-    "nyc": "^11.3.0"
+    "nyc": "^11.3.0",
+    "supertest": "^3.0.0"
   }
 }
